Add old version of styleguide

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ instagram:
 flicker:
   profilePage: https://www.flickr.com/photos/pirati/
 
-styleguide_base_url: 'https://styleguide.pirati.cz/latest'
+styleguide_base_url: 'https://styleguide.pirati.cz/2.14.x/'
 
 ############### SETTINSG #################
 
