edit - https://pi2.cz/daruj-pirati-cz-pha8

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ keywords: "piráti, česká pirátská strana, svoboda, demokracie, piráti na o
 organization:
   name: "Piráti Praha 8"
   email: praha8@pirati.cz
-  donateLink: https://dary.pirati.cz/podpor-kraj/praha/adresne-dary-pro-ks-praha/?p=110108
+  donateLink: https://pi2.cz/daruj-pirati-cz-pha8
   onboardingLink: https://nalodeni.pirati.cz/
 
 contactSummaryItems:
