--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -24,6 +24,8 @@ main:
         link: /lide/mistni-expertni-tymy/
   - name: Volby
     submenu:
+      - name: Senátní volby 2018
+        link: "https://lukaswagenknecht.cz/volby-2024/"
       - name: Komunální volby 2022
         link: /volby/2022-komunalni.html
       - name: Komunální volby 2018
