--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -37,7 +37,7 @@ regp:
   members:
     - { name: Radim Anton }
     - vojtech.blahos
-    - { name: Jan Borovička }
+    - jan.borovicka
     - { name: Jan Brandejs }
     - { name: Theodor Draksl }
     - { name: Josef Gajdoš}
