edit školské rady

--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -87,9 +87,12 @@ skolske-rady:
   name: Školské rady
   members:
     - { uid: pavel.franc, description: ZŠ U Školské zahrady }
-    - { uid: andrea.vildova, description: "SŠ designu a umění, knižní kultury a ekonomiky Náhorní" }
-    - { uid: jan.kolator, description: ZŠ LOPES Čimice }
     - { uid: tomas.marik, description: ZŠ Palmovka }
+    - { uid: jan.kolator, description: ZŠ LOPES Čimice }
+    - { uid: martin.sterba, description: "ZŠ a MŠ při FN Bulovka" }
+    - { uid: andrea.vildova, description: "Gymnázium Ústavní" }
+    - { uid: petr.bisek, description: "Karlínské gymnázium" }
+    - { uid: andrea.vildova, description: "SŠ designu a umění, knižní kultury a ekonomiky Náhorní" }
 
 met.doprava:
   name: Doprava
