edit + nový regP

--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -46,6 +46,7 @@ regp:
     - { name: Jakub Kočí }
     - lukas.kost
     - tomas.lempera
+    - { name: Pavel Mitošinka }
     - iva.nachtmannova
     - { name: Jindřiška Netrestová }
     - { name: Denisa Nováková }
