--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -50,10 +50,12 @@ regp:
     - iva.nachtmannova
     - { name: Jindřiška Netrestová }
     - { name: Denisa Nováková }
+    - { name: Ladislav Palán }
     - { name: Michal Pech }
     - { name: Václav Pokorný }
     - { name: Ladislav Povýšil }
     - { name: Klára Přibáňová }
+    - { name: Daniel Rexa }
     - { name: Tomáš Szczepanski }
     - martin.vavra
     - { name: Jakub Vojtíšek }
