--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 administrator:
-  email: pavel.franc@pirati.cz, martin.sterba@pirati.cz
+  email: martin.sterba@pirati.cz
 github:
   url: https://github.com/pirati-web/praha8.pirati.cz/
   branch: master
