--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -28,6 +28,7 @@ clenove:
     - tomas.marik
     - kveta.marikova
     - ondrej.profant
+    - daniel.rexa
     - ivo.slavka
     - veronika.siftova
     - andrea.vildova
