--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -27,6 +27,7 @@ clenove:
     - jan.borovicka
     - tomas.marik
     - kveta.marikova
+    - ladislav.palan
     - ondrej.profant
     - daniel.rexa
     - ivo.slavka
